--- a/index.html
+++ b/index.html
@@ -8,46 +8,51 @@
 </head>
 <body>
     <header>
-        <h1>Copain Bageri</h1>
-        <p>Hantverksbageri med hjärta för det goda 🍞</p>
+        <nav>
+            <a href="#">Hem</a>
+            <a href="#om-oss">Om oss</a>
+            <a href="#sortiment">Sortiment</a>
+            <a href="#kontakt">Kontakt</a>
+        </nav>
     </header>
-    <main>
-        <section>
+
+    <section class="hero">
+        <h1>Copain Bageri</h1>
+        <p>Hantverksbröd med kärlek 🍞</p>
+        <a href="#sortiment" class="btn">Se vårt sortiment</a>
+    </section>
+
+    <section id="sortiment" class="grid">
+        <div class="card">
+            <img src="placeholder1.jpg" alt="Levain">
+            <h3>Levain</h3>
+            <a href="#" class="btn-small">Läs mer</a>
+        </div>
+        <div class="card">
+            <img src="placeholder2.jpg" alt="Bullar">
+            <h3>Bullar</h3>
+            <a href="#" class="btn-small">Läs mer</a>
+        </div>
+        <div class="card">
+            <img src="placeholder3.jpg" alt="Kakor">
+            <h3>Kakor</h3>
+            <a href="#" class="btn-small">Läs mer</a>
+        </div>
+    </section>
+
+    <section id="om-oss" class="text-img">
+        <img src="placeholder4.jpg" alt="Bagerimiljö">
+        <div>
             <h2>Om oss</h2>
-            <p>Copain är ett litet bageri som drivs av passion för bröd, människor och hantverk. Vi bakar långjäst bröd med ekologiska råvaror i fokus.</p>
-        </section>
-        <section>
-            <h2>Sortiment</h2>
-            <ul>
-                <li>Levain</li>
-                <li>Surdegsbaguetter</li>
-                <li>Kanelbullar</li>
-                <li>Småkakor</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Kontakt</h2>
-            <p>📍 Adress: Brödgatan 1, 123 45 Bakstad</p>
-            <p>📧 E-post: <a href="mailto:hej@copain.se">hej@copain.se</a></p>
+            <p>Vi är ett litet hantverksbageri med passion för surdegsbröd och goda bakverk. Välkommen in till doften av nybakat!</p>
+            <a href="#" class="btn-small">Läs mer</a>
+        </div>
+    </section>
 
-            <form name="kontakt" method="POST" data-netlify="true" action="/tack.html">
-                <input type="hidden" name="form-name" value="kontakt">
-
-                <label for="namn">Namn:</label>
-                <input type="text" name="namn" required>
-
-                <label for="email">E-post:</label>
-                <input type="email" name="email" required>
-
-                <label for="meddelande">Meddelande:</label>
-                <textarea name="meddelande" rows="4" required></textarea>
-
-                <button type="submit">Skicka</button>
-            </form>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 Copain Bageri</p>
+    <footer id="kontakt">
+        <h3>Kontakt</h3>
+        <p>Mail: hej@copain.se</p>
+        <p>Adress: Brödgatan 1, 123 45 Bakby</p>
     </footer>
 </body>
 </html>
