--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
     <footer id="kontakt">
         <h3>Kontakt</h3>
-        <p>Mail: hej@copain.se</p>
-        <p>Adress: Brödgatan 1, 123 45 Bakby</p>
+        <p>Mail: bageriet@copain.se</p>
+        <p>Adress: Sankt Sigfrids Plan 7, 123 45 Bakby</p>
     </footer>
 </body>
 </html>
