--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             <p>
                 <button type="submit" class="btn">Skicka beställning</button>
             </p>
+            <p style="font-size:0.95em;color:#555;margin-top:-0.5em;">
+                🔒 Vi behandlar dina uppgifter enligt GDPR. De används endast för att hantera din förfrågan och sparas inte längre än nödvändigt.
+            </p>
         </form>
     </section>
 
