--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             <p style="font-size:0.95em;color:#555;margin-top:-0.5em;">
                 🔒 Vi behandlar dina uppgifter enligt GDPR. De används endast för att hantera din förfrågan och sparas inte längre än nödvändigt.
             </p>
+            <p style="font-size:0.95em;color:#555;margin-top:-1em;">
+                <a href="Integritetspolicy.pdf" target="_blank" style="color:#091f09;text-decoration:underline;">Läs vår integritetspolicy här</a>
+            </p>
         </form>
     </section>
 
