--- a/tack.html
+++ b/tack.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tack!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo_green_clove_transparent.png" type="image/png">
 </head>
 <body>
     <header>
