--- a/index.html
+++ b/index.html
@@ -9,58 +9,60 @@
 </head>
 <body>
     <header>
-        <img src="logo_green_clove_transparent.png" alt="Copain Bageri Logotyp" class="header-logo">
+        <img src="logo_green_no_clove_low.jpeg" alt="Copain Bageri Logotyp" class="header-logo">
         <nav>
-            <a href="#" data-key="navHome">Hem</a>
             <a href="#om-oss" data-key="navAbout">Om oss</a>
             <a href="#sortiment" data-key="navProducts">Sortiment</a>
             <a href="#bestall" data-key="navOrder">Förbeställ</a>
             <a href="#kontakt" data-key="navContact">Kontakt</a>
         </nav>
-        <div id="lang-switch" style="display:flex;gap:0.5em;align-items:center;margin-left:1em;">
+        <div id="lang-switch" style="display:flex;gap:0.5em;align-items:center;">
             <img src="flag-se.svg" alt="Svenska" aria-label="Svenska" id="flag-se" style="width:32px;cursor:pointer;" tabindex="0">
             <img src="flag-gb.svg" alt="English" aria-label="English" id="flag-gb" style="width:32px;cursor:pointer;" tabindex="0">
         </div>
     </header>
 
-    <section class="hero">
-        <img src="logo_white_clove.png" alt="Copain Bageri" class="hero-logo">
-        <img src="hero-bread.jpg" alt="Bröd på bord" style="width:100%;max-width:700px;border-radius:16px;margin:2em auto 1em;display:block;box-shadow:0 4px 24px rgba(0,0,0,0.08);">
-        <p data-key="heroText">Hantverksbröd med kärlek 🍞</p>
-        <a href="#sortiment" class="btn" data-key="heroBtn">Se vårt sortiment</a>
-    </section>
+    <div class="hero-picture">
+        <img src="hero-bread.jpg" alt="Bröd på bord" style="width:100%;height:420px;object-fit:cover;display:block;">
+    </div>
 
-    <section id="om-oss" class="text-img">
-        <img src="bakery-interior.jpg" alt="Bagerimiljö">
-        <div>
+    <section id="om-oss" class="zigzag-section">
+        <div class="zigzag-text">
             <h2 data-key="aboutTitle">Om oss</h2>
             <p data-key="aboutText">Vi är ett litet hantverksbageri med passion för surdegsbröd och goda bakverk. Välkommen in till doften av nybakat!</p>
-            <a href="#" class="btn-small" data-key="aboutBtn">Läs mer</a>
+        </div>
+        <div class="zigzag-img">
+            <img src="bakery-interior.jpg" alt="Bagerimiljö">
         </div>
     </section>
 
-    <section id="sortiment" class="grid">
-        <div class="card">
-            <img src="levain.jpg" alt="Levain">
-            <h3 data-key="levain">Levain</h3>
-            <a href="#" class="btn-small" data-key="cardBtn">Läs mer</a>
+    <section id="sortiment" class="zigzag-section">
+        <div class="zigzag-img">
+            <img src="levain.jpg" alt="Sortiment">
         </div>
-        <div class="card">
-            <img src="bullar.jpg" alt="Bullar">
-            <h3 data-key="bullar">Bullar</h3>
-            <a href="#" class="btn-small" data-key="cardBtn">Läs mer</a>
+        <div class="zigzag-text">
+            <h2 data-key="navProducts">Sortiment</h2>
+            <p data-key="productsText">Vi bakar dagligen ett urval av surdegsbröd, bullar och kakor – allt på ekologiska råvaror och med mycket kärlek till hantverket. Välkommen att upptäcka vårt sortiment i butiken!</p>
         </div>
-        <div class="card">
-            <img src="kakor.jpg" alt="Kakor">
-            <h3 data-key="kakor">Kakor</h3>
-            <a href="#" class="btn-small" data-key="cardBtn">Läs mer</a>
+    </section>
+
+    <section id="instagram" class="zigzag-section">
+        <div class="zigzag-text">
+            <h2 data-key="instagramTitle">Följ oss på Instagram</h2>
+            <p data-key="instagramText">Se våra senaste bilder och följ vår vardag i bageriet!</p>
+        </div>
+        <div class="zigzag-img">
+            <!-- Instagram-widget eller placeholder-bild -->
+            <div style="background:#eee;border-radius:12px;min-height:300px;display:flex;align-items:center;justify-content:center;">
+                <span style="color:#aaa;">[Instagram-flöde här]</span>
+            </div>
         </div>
     </section>
 
     <section id="bestall" class="form-section">
         <h2 data-key="orderTitle">Förbeställning</h2>
         <p data-key="orderDesc">Planera ditt besök och förbeställ ditt favoritbröd eller bullar direkt här.</p>
-        <form name="bestallning" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/tack.html">
+        <form name="bestallning" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
             <input type="hidden" name="form-name" value="bestallning" />
             <p class="hidden">
                 <label>Fyll inte i detta om du är människa: <input name="bot-field" /></label>
@@ -92,10 +94,13 @@
                 <a href="Integritetspolicy.pdf" target="_blank" style="color:#091f09;text-decoration:underline;" data-key="policy">Läs vår integritetspolicy här</a>
             </p>
         </form>
+        <div id="form-thankyou" data-key="formThankYou" style="display:none;text-align:center;font-size:1.2em;color:#155724;background:#d4edda;border-radius:8px;padding:2em 1em;margin-top:2em;max-width:500px;margin-left:auto;margin-right:auto;">
+            Tack för din beställning! Vi återkommer så snart vi kan.
+        </div>
     </section>
 
     <footer id="kontakt">
-        <img src="logo_white_no_clove.png" alt="Copain Bageri" class="footer-logo">
+        <img src="logo_green_clove.png" alt="Copain Bageri" class="footer-logo footer-logo-large">
         <h3 data-key="contactTitle">Kontakt</h3>
         <p data-key="contactMail">Mail: bageriet@copain.se</p>
         <p data-key="contactAddress">Adress: Sankt Sigfrids Plan 7, 412 66 Göteborg</p>
@@ -113,6 +118,9 @@ const translations = {
     heroBtn: 'Se vårt sortiment',
     aboutTitle: 'Om oss',
     aboutText: 'Vi är ett litet hantverksbageri med passion för surdegsbröd och goda bakverk. Välkommen in till doften av nybakat!',
+    productsText: 'Vi bakar dagligen ett urval av surdegsbröd, bullar och kakor – allt på ekologiska råvaror och med mycket kärlek till hantverket. Välkommen att upptäcka vårt sortiment i butiken!',
+    instagramTitle: 'Följ oss på Instagram',
+    instagramText: 'Se våra senaste bilder och följ vår vardag i bageriet!',
     aboutBtn: 'Läs mer',
     levain: 'Levain',
     bullar: 'Bullar',
@@ -129,7 +137,8 @@ const translations = {
     policy: 'Läs vår integritetspolicy här',
     contactTitle: 'Kontakt',
     contactMail: 'Mail: bageriet@copain.se',
-    contactAddress: 'Adress: Sankt Sigfrids Plan 7, 412 66 Göteborg'
+    contactAddress: 'Adress: Sankt Sigfrids Plan 7, 412 66 Göteborg',
+    formThankYou: 'Tack för din beställning! Vi återkommer så snart vi kan.'
   },
   en: {
     navHome: 'Home',
@@ -141,6 +150,9 @@ const translations = {
     heroBtn: 'See our products',
     aboutTitle: 'About us',
     aboutText: 'We are a small artisan bakery with a passion for sourdough bread and delicious pastries. Welcome to the scent of freshly baked goods!',
+    productsText: 'We bake a daily selection of sourdough bread, buns and cookies – all with organic ingredients and a true love for the craft. Discover our range in the shop!',
+    instagramTitle: 'Follow us on Instagram',
+    instagramText: 'See our latest photos and follow our everyday life in the bakery!',
     aboutBtn: 'Read more',
     levain: 'Levain',
     bullar: 'Buns',
@@ -157,7 +169,8 @@ const translations = {
     policy: 'Read our privacy policy here',
     contactTitle: 'Contact',
     contactMail: 'Email: bageriet@copain.se',
-    contactAddress: 'Address: Sankt Sigfrids Plan 7, 412 66 Göteborg'
+    contactAddress: 'Address: Sankt Sigfrids Plan 7, 412 66 Göteborg',
+    formThankYou: 'Thank you for your order! We will get back to you as soon as possible.'
   }
 };
 
@@ -172,12 +185,38 @@ function setLang(lang) {
       }
     }
   }
+  // Om tackmeddelandet är synligt, uppdatera även det
+  const thankYou = document.getElementById('form-thankyou');
+  if (thankYou && thankYou.style.display !== 'none') {
+    thankYou.textContent = translations[lang].formThankYou;
+  }
 }
 
 document.getElementById('flag-se').addEventListener('click', () => setLang('sv'));
 document.getElementById('flag-gb').addEventListener('click', () => setLang('en'));
 // Default: svenska
 setLang('sv');
+
+// Form hantering för tackmeddelande
+const form = document.querySelector('form[name="bestallning"]');
+const thankYou = document.getElementById('form-thankyou');
+if(form && thankYou) {
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    const data = new FormData(form);
+    fetch('/', {
+      method: 'POST',
+      body: data,
+    }).then(() => {
+      form.style.display = 'none';
+      thankYou.style.display = 'block';
+    }).catch(() => {
+      form.style.display = 'none';
+      thankYou.style.display = 'block';
+      thankYou.textContent = 'Tack! Något gick fel, men vi har tagit emot din beställning.';
+    });
+  });
+}
 </script>
 </body>
 </html>
