--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copain Bageri</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_websafe.css">
     <link rel="icon" href="logo_green_clove_transparent.png" type="image/png">
 </head>
 <body>
