--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copain Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
-    <link rel="stylesheet" href="style_websafe_palatino.css">
+    <link rel="stylesheet" href="style_p22.css">
     <link rel="icon" href="logo_green_clove_transparent.png" type="image/png">
 </head>
 <body>
