--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <div class="hero-picture">
-        <img src="hero-bread.jpg" alt="Bröd på bord" style="width:100%;height:420px;object-fit:cover;display:block;">
+        <img src="Bullar_Horisontell.png" alt="Bröd på bord" style="width:100%;height:420px;object-fit:cover;display:block;">
     </div>
 
     <section id="om-oss" class="zigzag-section">
