--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="sortiment" class="zigzag-section">
         <div class="zigzag-img">
-            <img src="levain.jpg" alt="Sortiment">
+            <img src="Surdeg.png" alt="Sortiment">
         </div>
         <div class="zigzag-text">
             <h2 data-key="navProducts">Sortiment</h2>
