--- a/index_new.html
+++ b/index_new.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copain Bageri</title>
+    <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
+    <link rel="stylesheet" href="style_p22.css">
+    <link rel="icon" href="logo_white_clove.png" type="image/png">
     <style>
         body {
             font-family: "p22-underground", sans-serif;
