--- a/index_new.html
+++ b/index_new.html
@@ -6,7 +6,7 @@
     <title>Copain Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
     <link rel="stylesheet" href="style_p22.css">
-    <link rel="icon" href="logo_white_clove.png" type="image/png">
+    <link rel="icon" href="logo_green_clove_small.png" type="image/png">
     <style>
         body {
             font-family: "p22-underground", sans-serif;
