--- a/index_new2.html
+++ b/index_new2.html
@@ -249,7 +249,7 @@
     <!-- Header med logotype och meny -->
     <header class="header">
         <div class="logo">
-            <img src="logo_white_clove.png" alt="Copain Bageri Logotyp" class="header-logo">
+            <img src="logo_green_clove_transparent.png" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
             <a href="#om-oss">Om oss</a>
