--- a/index_final.html
+++ b/index_final.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copain Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/asf7weq.css">
-    <link rel="stylesheet" href="style_p22.css">
+    <link rel="stylesheet" href="style_p22_final.css">
     <link rel="icon" href="logo_green_clove_small.png" type="image/png">
     
 </head>
