--- a/index_final.html
+++ b/index_final.html
@@ -87,9 +87,6 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-logo">
-            <img src="logo_green_clove.png" alt="Copain Bageri Logotyp" class="footer-logo">
-        </div>
         <div class="contact-info">
             <div class="contact-item">
                 <h4>Adress</h4>
@@ -103,6 +100,9 @@
                 <h4>Öppettider</h4>
                 <p>Mån-Fre: 07:00-18:00<br>Lör: 08:00-16:00<br>Sön: 09:00-15:00</p>
             </div>
+        </div>
+        <div class="footer-logo-large">
+            <img src="logo_green_clove.png" alt="Copain Bageri Logotyp" class="footer-logo-large">
         </div>
     </footer>
 </body>
