--- a/index_final.html
+++ b/index_final.html
@@ -13,7 +13,7 @@
     <!-- Header med logotype och meny -->
     <header class="header">
         <div class="logo">
-            <img src="logo_green_clove.png" alt="Copain Bageri Logotyp" class="header-logo">
+            <img src="logo_white_clove.png" alt="Copain Bageri Logotyp" class="header-logo-large">
         </div>
         <nav>
             <a href="#om-oss">Om oss</a>
@@ -81,7 +81,7 @@
                 • Julbakning och säsongsspecialiteter
             </div>
             
-            <a href="tel:031-123456" class="btn">Ring och beställ</a>
+     <!--       <a href="tel:031-123456" class="btn">Ring och beställ</a> -->
         </div>
     </section>
 
