--- a/index_final.html
+++ b/index_final.html
@@ -13,7 +13,7 @@
     <!-- Header med logotype och meny -->
     <header class="header">
         <div class="logo">
-            <img src="logo_white_clove.png" alt="Copain Bageri Logotyp" class="header-logo-large">
+            <img src="logo_white_clove.png" alt="Copain Bageri Logotyp" class="header-logo">
         </div>
         <nav>
             <a href="#om-oss">Om oss</a>
