--- a/index_final.html
+++ b/index_final.html
@@ -90,15 +90,15 @@
         <div class="contact-info">
             <div class="contact-item">
                 <h4>Adress</h4>
-                <p>Bagargatan 15<br>411 23 Göteborg</p>
+                <p>Sankt Sigfrids Plan 7<br>412 66 Göteborg</p>
             </div>
             <div class="contact-item">
                 <h4>Telefon</h4>
                 <p>031-123 456</p>
             </div>
             <div class="contact-item">
-                <h4>Öppettider</h4>
-                <p>Mån-Fre: 07:00-18:00<br>Lör: 08:00-16:00<br>Sön: 09:00-15:00</p>
+                <h4>Instagram</h4>
+                <p>@copainbageri</p>
             </div>
         </div>
         <div class="footer-logo-large">
